Atualização do CSS para inserir a responsividade

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <button class="button-responsividade">☰</button>
+    </div>
     <main class="container">
         <div class="tech-circle">
             <div class="circle"></div>
